# RoboSmith

./: .gitignore  README-en.md  README.md  experiments.md  pyproject.toml
assets/: catalog.json
configs/eval/: robotsmith_pick_cube.yaml  robotsmith_smoke_test.yaml  smolvla_server.yaml
demo/: README.md  run_pipeline.py  setup_env.sh
demo/sample_images/: README.md
docs/: background.md  design.md  general_object_grasp_solution.md  part1-exp.md  part2-exp.md  part2.md  part3-exp.md  part3.md  stage-1-exp.md  stage-1.md  stage-2-exp.md  stage-2.md  stage1_exp.md  stage2_exp.md  study.md
pipeline/: collect_data.py  collect_data_dart.py  eval_policy.py  plot_loss.py  snapshot_scene.py  train_smolvla.py
robotsmith/: __init__.py  cli.py
robotsmith/assets/: __init__.py  builtin.py  library.py  schema.py  search.py
robotsmith/eval/: __init__.py  benchmark.py
robotsmith/grasp/: __init__.py  graspgen_wrapper.py  learned_planner.py  plan.py  planner.py  pointcloud_utils.py  template_planner.py  transforms.py
scripts/: _tmp_e2e.sh  _tmp_test_import.py  benchmark_io.sh  browse_assets.py  compute_stable_poses.py  import_objaverse.py  patch_genesis_rocm.py  render_mesh_local.py  run_b0_aligned.sh  run_b0_eval_only.sh  run_b0_mi308.sh  run_b0_train_eval.sh  run_b0_train_eval_hf.sh  run_e1_mi308.sh  run_e2e_remote.sh  setup_hunyuan_deps.sh  sync_assets.py  test_e2e_remote.py  test_e2e_t2i_3d.py  test_e2e_turbo_vs_base.py  test_flux_t2i.py  verify_triposr.sh
tests/: test_grasp_learned.py  test_library.py  test_mesh_to_urdf.py  test_scenes.py
(+139 files in other folders)
